# DuelPerformanceLogger

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  main.py  pyproject.toml  readme.md  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
app/: __init__.py  main.py
cli/: restore_from_backup.py
docs/: 00_baseline.md  01_coding_guidelines.md  01_project_structure.md  02_database_policy.md  02_kv_guidelines.md  03_icd_core.md  03_logging_monitoring.md  04_async_policy.md  05_error_taxonomy.md  06_logging.md  07_ci_automation.md  07_test_plan.md  08_release.md  09_project_structure.md  11_security.md  13_update_and_deployment.md  A00_Baseline_Environment.md  A01_Coding_Guidelines.md  A02_Database_Policy.md  A03_Interface_Control_Core.md  A04_Async_Policy.md  A05_Error_Taxonomy.md  A06_Logging_Strategy.md  A07_CI_Automation.md  A08_Project_Structure.md  A09_Naming_Conventions.md  AGENTS.md  B10_Release_Management.md  B11_Security_Standards.md  B12_Test_Plan.md  B13_Update_Deployment.md  B14_Regression_Test_Checklist.md  C20_Agent_Policies.md  C21_Improvement_Proposals.md  C22_Known_Issues.md  C23_Rebuild_Policies_Script.py  C24_Codex_Core_Template.md  C25_Codex_Doc_Template.md  C26_Codex_UI_Template.md  C27_UI_Spec_MenuScreen.md  (+8 more)
function/: __init__.py  cmn_app_state.py  cmn_config.py  cmn_database.py  cmn_logger.py  cmn_resources.py  config.py  database.py  logger.py  resources.py
tests/: test_cmn_database.py  test_csv_restore.py  test_db_handler.py  test_recording_features.py  test_versioning.py  test_youtube_auth.py  (+1 more)
(+93 files in other folders)
